<resources>
    <string name="app_name">Sudoku</string>

    <string name="sync_pref">Music</string>
    <string name="sync_pref_summary">Play/Stop background music</string>

    <string name="title_language">Language</string>
    <string name="default_value_languege">en</string>
    <string name="summary_language">Choose the language </string>

    <string name="title_theme">Theme</string>
    <string name="default_value_theme">dark</string>
    <string name="summary_theme">Choose the theme</string>

    <string name="button_play">Play</string>
    <string name="button_scors">Scors</string>
    <string name="button_connect">Connect to your Account</string>

    <string name="easy">Easy</string>
    <string name="meddium">Meddium</string>
    <string name="hard">Hard</string>
    <string name="list_times">List times</string>

    <string name="congratulations">Congratulations!</string>
    <string name="completed_time">Completed time:</string>
    <string name="back">Back</string>

    <string name="sudoku_rules">Sudoku rules</string>
    <string name="use_numbers_1_9">Use Numbers 1-9</string>
    <string name="don_t_repeat_any_numbers">Don’t Repeat Any Numbers</string>
    <string name="don_t_guess">Don’t Guess</string>
    <string name="use_process_of_elimination">Use Process of Elimination</string>

    <string name="facebook_app_id">636261623896661</string>
    <string name="fb_login_protocol_scheme">fb636261623896661</string>
</resources>
