<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="check_music"
        android:title="@string/sync_pref"
        android:summary="@string/sync_pref_summary"
        android:defaultValue="false"
        />
    <ListPreference
        android:key="key_language"
        android:title="@string/title_language"
        android:defaultValue="@string/default_value_languege"
        android:entries="@array/language_name"
        android:entryValues="@array/language_value"
        android:summary="@string/summary_language"/>

    <ListPreference
        android:key="key_theme"
        android:title="@string/title_theme"
        android:defaultValue="@string/default_value_theme"
        android:entries="@array/theme_array_name"
        android:entryValues="@array/theme_array_value"
        android:summary="@string/summary_theme"/>
</PreferenceScreen>