<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/congrat_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textSize="@dimen/pop_up_text"
        android:textStyle="bold"
        android:paddingTop="@dimen/align"/>
    <TextView
        android:id="@+id/completed_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed_time"
        android:textSize="@dimen/pop_up_text"
        android:textAlignment="center"
        android:layout_below="@id/congrat_id"/>
    <TextView
        android:id="@+id/chron_time_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/pop_up_text"
        android:textAlignment="center"
        android:layout_below="@+id/completed_time"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/pop_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chron_time_show"
        android:text="@string/back"/>

</RelativeLayout>