<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/padding"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/TextViewTitlePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:text="@string/sudoku_rules"/>

        <TextView
            android:id="@+id/TextViewTitleArticle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:text="@string/use_numbers_1_9"/>
        <TextView
            android:id="@+id/TextViewArticle1"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TextViewTitleArticle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:text="@string/don_t_repeat_any_numbers"/>

        <ImageView
            android:id="@+id/image1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/image1" />
        <TextView
            android:id="@+id/TextViewArticle2"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TextViewTitleArticle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:text="@string/don_t_guess"/>
        <TextView
            android:id="@+id/TextViewArticle3"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TextViewTitleArticle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"
            android:text="@string/use_process_of_elimination"/>
        <TextView
            android:id="@+id/TextViewArticle4"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/image2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/image2" />
    </LinearLayout>

</ScrollView>